--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <header id="header">
         <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Genge</button>
-            <ul class="dropdown-menu" style="padding-left: 20px; background-color: #333;">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Genre</button>
+            <ul class="dropdown-menu" style="padding-left: 20px; background-color: #333;"
                 <li><a href= "#drama">Drama</a></li>
                 <li><a href= "#fantasy">Fantasy</a></li>
                 <li><a href= "#action">Action</a></li>
