--- a/html/action.html
+++ b/html/action.html
@@ -21,7 +21,7 @@
             <img src="/images/indiana jones and the dial of destiny-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Indiana Jones and the Dial of Destiny.</p>
+                    <p>Indiana Jones and the Dial of Destiny</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/indiana jones and the dial of destinyBG.jpg' alt=''>
@@ -66,7 +66,7 @@
             <img src="/images/transformers rise of the beasts-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Transformers: Rise of the Beasts.</p>
+                    <p>Transformers: Rise of the Beasts</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/transformers rise of the beastsBG.jpg' alt=''>
@@ -81,7 +81,7 @@
             <img src="/images/spider-man across the spider-verse-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Spider-Man: Across the Spider-Verse.</p>
+                    <p>Spider-Man: Across the Spider-Verse</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/spider-man across the spider-verseBG.jpg' alt=''>
@@ -96,7 +96,7 @@
             <img src="/images/john wick chapter 4-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>John Wick: Chapter 4.</p>
+                    <p>John Wick: Chapter 4</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/john wick chapter 4BG.jpg' alt=''>
@@ -111,7 +111,7 @@
             <img src="/images/inseption-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Inception.</p>
+                    <p>Inception</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/inseptionBG.jpg' alt=''>
@@ -126,7 +126,7 @@
             <img src="/images/avatar the way of water-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Avatar: The Way of Water.</p>
+                    <p>Avatar: The Way of Water</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/avatar the way of waterBG.jpg' alt=''>
@@ -141,7 +141,7 @@
             <img src="/images/Dunkirk-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Dunkirk.</p>
+                    <p>Dunkirk</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/DunkirkBG.jpg' alt=''>
@@ -156,7 +156,7 @@
             <img src="/images/Topgun-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Top Gun: Maverick.</p>
+                    <p>Top Gun: Maverick</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/TopgunBG.jpg' alt=''>
