--- a/html/animation.html
+++ b/html/animation.html
@@ -51,7 +51,7 @@
             <img src="/images/spider-man across the spider-verse-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Spider-Man: Across the Spider-Verse.</p>
+                    <p>Spider-Man: Across the Spider-Verse</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/spider-man across the spider-verseBG.jpg' alt=''>
@@ -66,7 +66,7 @@
             <img src="/images/Cars-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Cars.</p>
+                    <p>Cars</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/CarsBG.jpg' alt=''>
@@ -81,7 +81,7 @@
             <img src="/images/Moana-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Moana.</p>
+                    <p>Moana</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/MoanaBG.jpg' alt=''>
@@ -96,7 +96,7 @@
             <img src="/images/Inside Out-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Inside Out.</p>
+                    <p>Inside Out</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/Inside OutBG.jpg' alt=''>
@@ -111,7 +111,7 @@
             <img src="/images/The Lion King-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>The Lion King.</p>
+                    <p>The Lion King</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/The Lion KingBG.jpg' alt=''>
@@ -126,7 +126,7 @@
             <img src="/images/Zootopia-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Zootopia.</p>
+                    <p>Zootopia</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/ZootopiaBG.jpg' alt=''>
@@ -141,7 +141,7 @@
             <img src="/images/coco-poster.jpeg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Coco.</p>
+                    <p>Coco</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/cocoBG.jpeg' alt=''>
@@ -156,7 +156,7 @@
             <img src="/images/How to Train Your Dragon-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>How to Train Your Dragon.</p>
+                    <p>How to Train Your Dragon</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/How to Train Your DragonBG.jpg' alt=''>
