--- a/html/biography.html
+++ b/html/biography.html
@@ -138,16 +138,16 @@
             ">
         </div>
         <div class="image">
-            <img src="/images/The Super Mario Bros-Poster.jpg" alt="" class="imageModalTrigger" data-content="
+            <img src="/images/The Social Network-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Your Name.</p>
+                    <p>The Social Network</p>
                 </div>
                 <div class='poster-landscape'>
-                    <img src='/images/yourname-background.png' alt=''>
+                    <img src='/images/The Social Network BG.jpg' alt=''>
                 </div>
                 <div class='description'>
-                    <p>Two teenagers share a profound, magical connection upon discovering they are swapping bodies. Things manage to become even more complicated when the boy and girl decide to meet in person.</p>
+                    <p>As Harvard student Mark Zuckerberg creates the social networking site that would become known as Facebook, he is sued by the twins who claimed he stole their idea and by the co-founder who was later squeezed out of the business.</p>
                 </div>
             </div>
             ">
