--- a/html/comedy.html
+++ b/html/comedy.html
@@ -21,7 +21,7 @@
             <img src="/images/Barbie-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Barbie.</p>
+                    <p>Barbie</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/BarbieBG.jpg' alt=''>
@@ -51,7 +51,7 @@
             <img src="/images/puss in boots-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Puss in Boots: The Last Wish.</p>
+                    <p>Puss in Boots: The Last Wish</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/puss in bootsBG.jpg' alt=''>
@@ -66,7 +66,7 @@
             <img src="/images/crazy stupid love -Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Crazy, Stupid, Love.</p>
+                    <p>Crazy, Stupid, Love</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/crazy stupid loveBG.jpg' alt=''>
@@ -81,7 +81,7 @@
             <img src="/images/la la land-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>La La Land.</p>
+                    <p>La La Land</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/la la landBG.jpg' alt=''>
@@ -96,7 +96,7 @@
             <img src="/images/the suicide squad-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>The Suicide Squad.</p>
+                    <p>The Suicide Squad</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/the suicide squadBG.jpg' alt=''>
@@ -111,7 +111,7 @@
             <img src="/images/The Nice Guys-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>The Nice Guys.</p>
+                    <p>The Nice Guys</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/The Nice GuysBG.jpg' alt=''>
@@ -126,7 +126,7 @@
             <img src="/images/Shazam! Fury of the Gods-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Shazam! Fury of the Gods .</p>
+                    <p>Shazam! Fury of the Gods</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/Shazam! Fury of the GodsBG.jpg' alt=''>
@@ -141,7 +141,7 @@
             <img src="/images/the murderer.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>The Murderer.</p>
+                    <p>The Murderer</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/the murdererBG.jpg' alt=''>
@@ -156,7 +156,7 @@
             <img src="/images/The Hangover-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>The Hangover.</p>
+                    <p>The Hangover</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/The HangoverBG.jpg' alt=''>
