--- a/html/drama.html
+++ b/html/drama.html
@@ -36,7 +36,7 @@
             <img src="/images/Interstellar-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Interstellar.</p>
+                    <p>Interstellar</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/InterstellarBG.jpg' alt=''>
@@ -51,7 +51,7 @@
             <img src="/images/dune1-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Dune: Part One.</p>
+                    <p>Dune: Part One</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/dune1-BG.jpg' alt=''>
@@ -66,7 +66,7 @@
             <img src="/images/the shawshank-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>The Shawshank Redemption .</p>
+                    <p>The Shawshank Redemption</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/the shawshankBG.jpg' alt=''>
@@ -81,7 +81,7 @@
             <img src="/images/Midsommar-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Midsommar.</p>
+                    <p>Midsommar</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/MidsommarBG.png' alt=''>
@@ -96,7 +96,7 @@
             <img src="/images/The Whale-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>The Whale.</p>
+                    <p>The Whale</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/The WhaleBG.jpg' alt=''>
@@ -111,7 +111,7 @@
             <img src="/images/65-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>65.</p>
+                    <p>65</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/65BG.jpg' alt=''>
@@ -126,7 +126,7 @@
             <img src="/images/Nobody-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Nobody.</p>
+                    <p>Nobody</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/NobodyBG.jpg' alt=''>
@@ -141,7 +141,7 @@
             <img src="/images/fifty shades of grey-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Fifty Shades of Grey .</p>
+                    <p>Fifty Shades of Grey</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/fifty shades of greyBG.jpg' alt=''>
@@ -156,7 +156,7 @@
             <img src="/images/parasite-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Parasite.</p>
+                    <p>Parasite</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/parasiteBG.jpg' alt=''>
