--- a/html/fantasy.html
+++ b/html/fantasy.html
@@ -36,7 +36,7 @@
             <img src="/images/Barbie-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Barbie.</p>
+                    <p>Barbie</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/BarbieBG.jpg' alt=''>
@@ -51,7 +51,7 @@
             <img src="/images/the little mermaid-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>The Little Mermaid.</p>
+                    <p>The Little Mermaid</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/the little mermaidBG.jpeg' alt=''>
@@ -66,7 +66,7 @@
             <img src="/images/black adam-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Black Adam.</p>
+                    <p>Black Adam</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/black adamBG.jpg' alt=''>
@@ -81,7 +81,7 @@
             <img src="/images/About time-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>About time.</p>
+                    <p>About time</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/About timeBG.jpg' alt=''>
@@ -96,7 +96,7 @@
             <img src="/images/Free Guy-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Free Guy.</p>
+                    <p>Free Guy</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/Free GuyBG.jpg ' alt=''>
@@ -111,7 +111,7 @@
             <img src="/images/Moana-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Moana.</p>
+                    <p>Moana</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/MoanaBG.jpg' alt=''>
@@ -126,7 +126,7 @@
             <img src="/images/Cinderella-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Cinderella.</p>
+                    <p>Cinderella</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/CinderellaBG.jpg' alt=''>
@@ -141,7 +141,7 @@
             <img src="/images/beauty and the beast-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Beauty and the Beast.</p>
+                    <p>Beauty and the Beast</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/beauty and the beastBG.jpg' alt=''>
@@ -156,7 +156,7 @@
             <img src="/images/Pixels-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Pixels.</p>
+                    <p>Pixels</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/PixelsBG.jpg' alt=''>
