--- a/html/horror.html
+++ b/html/horror.html
@@ -21,7 +21,7 @@
             <img src="/images/Talk to Me-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Talk to Me.</p>
+                    <p>Talk to Me</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/Talk to MeBG.jpg' alt=''>
@@ -36,7 +36,7 @@
             <img src="/images/Evil Dead Rise.jpeg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Evil Dead Rise.</p>
+                    <p>Evil Dead Rise</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/Evil Dead RiseBG.jpg' alt=''>
@@ -51,7 +51,7 @@
             <img src="/images/Nope-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Nope.</p>
+                    <p>Nope</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/NopeBG.jpg' alt=''>
@@ -66,7 +66,7 @@
             <img src="/images/The Pope's Exorcist-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>The Pope's Exorcist.</p>
+                    <p>The Pope's Exorcist</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/PopeBG.jpg' alt=''>
@@ -81,7 +81,7 @@
             <img src="/images/the conjuring-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>The Conjuring.</p>
+                    <p>The Conjuring</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/the conjuringBG.jpg' alt=''>
@@ -96,7 +96,7 @@
             <img src="/images/Get Out-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Get Out.</p>
+                    <p>Get Out</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/Get OutBG.jpg' alt=''>
@@ -111,7 +111,7 @@
             <img src="/images/it-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>It.</p>
+                    <p>It</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/itBG.jpg' alt=''>
@@ -126,7 +126,7 @@
             <img src="/images/The Nun-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>The Nun.</p>
+                    <p>The Nun</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/The NunBG.jpg' alt=''>
@@ -141,7 +141,7 @@
             <img src="/images/The Conjuring 2-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>The Conjuring 2.</p>
+                    <p>The Conjuring 2</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/The Conjuring 2BG.jpg' alt=''>
@@ -156,7 +156,7 @@
             <img src="/images/Us.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Us.</p>
+                    <p>Us</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/UsBG.jpg' alt=''>
