--- a/html/romance.html
+++ b/html/romance.html
@@ -21,7 +21,7 @@
             <img src="/images/the notebook-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>The Notebook.</p>
+                    <p>The Notebook</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/The NotebookBG.jpg' alt=''>
@@ -36,7 +36,7 @@
             <img src="/images/Forrest-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Forrest Gump.</p>
+                    <p>Forrest Gump</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/ForrestBG.jpg' alt=''>
@@ -51,7 +51,7 @@
             <img src="/images/About time-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>About time.</p>
+                    <p>About time</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/About timeBG.jpg' alt=''>
@@ -66,7 +66,7 @@
             <img src="/images/Her-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Her.</p>
+                    <p>Her</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/HerBG.jpg' alt=''>
@@ -81,7 +81,7 @@
             <img src="/images/MebeforeYou-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Me Before You.</p>
+                    <p>Me Before You</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/MebeforeYouBG.jpg' alt=''>
@@ -96,7 +96,7 @@
             <img src="/images/A Star Is Born-Poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>A Star Is Born.</p>
+                    <p>A Star Is Born</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/A Star Is BornBG.jpg' alt=''>
@@ -111,7 +111,7 @@
             <img src="/images/Marriage Story-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Marriage Story.</p>
+                    <p>Marriage Story</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/Marriage StoryBG.jpg' alt=''>
@@ -126,7 +126,7 @@
             <img src="/images/The Terminal-poster.png" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>The Terminal.</p>
+                    <p>The Terminal</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/The TerminalBG.jpg' alt=''>
@@ -141,7 +141,7 @@
             <img src="/images/The Shape of Water-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>The Shape of Water.</p>
+                    <p>The Shape of Water</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/The Shape of WaterBG.jpg' alt=''>
@@ -156,7 +156,7 @@
             <img src="/images/Begin Again-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Begin Again.</p>
+                    <p>Begin Again</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/Begin AgainBG.jpg' alt=''>
