--- a/html/sci-fi.html
+++ b/html/sci-fi.html
@@ -21,7 +21,7 @@
             <img src="/images/Armageddon-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Armageddon.</p>
+                    <p>Armageddon</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/ArmageddonBG.jpg' alt=''>
@@ -38,7 +38,7 @@
             <img src="/images/Mad MaxFury Road-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Mad Max: Fury Road.</p>
+                    <p>Mad Max: Fury Road</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/Mad MaxFury RoadBG.jpg' alt=''>
@@ -53,7 +53,7 @@
             <img src="/images/Don't Look Up-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Don't Look Up.</p>
+                    <p>Don't Look Up</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/Dont look.jpg' alt=''>
@@ -68,7 +68,7 @@
             <img src="/images/Bird Box-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Bird Box.</p>
+                    <p>Bird Box</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/Bird BoxBG.jpg' alt=''>
@@ -83,7 +83,7 @@
             <img src="/images/Jurassic World Dominion-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Jurassic World Dominion.</p>
+                    <p>Jurassic World Dominion</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/Jurassic World DominionBG.jpg' alt=''>
@@ -98,7 +98,7 @@
             <img src="/images/The Martian-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>The Martian.</p>
+                    <p>The Martian</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/The MartianBG.jpg' alt=''>
@@ -113,7 +113,7 @@
             <img src="/images/The Mist-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>The Mist.</p>
+                    <p>The Mist</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/The MistBG.jpg' alt=''>
@@ -128,7 +128,7 @@
             <img src="/images/Venom-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Venom.</p>
+                    <p>Venom</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/VenomBG.jpg' alt=''>
@@ -143,7 +143,7 @@
             <img src="/images/World War Z-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>World War Z.</p>
+                    <p>World War Z</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/World War ZBG.jpg' alt=''>
@@ -158,7 +158,7 @@
             <img src="/images/Bumblebee-poster.jpg" alt="" class="imageModalTrigger" data-content="
             <div class='model'>
                 <div class='title'>
-                    <p>Bumblebee.</p>
+                    <p>Bumblebee</p>
                 </div>
                 <div class='poster-landscape'>
                     <img src='/images/BumblebeeBG.jpg' alt=''>
